<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="confirm">Xác nhận</string>
    <string name="domestic_atm_card">Thẻ ATM nội địa</string>
    <string name="next">Tiếp tục</string>
    <string name="enter_number_card">Nhập số thẻ</string>
    <string name="enter_the_number_card_on_the_front_of_the_card">Nhập thẻ số ở mặt trước thẻ</string>
    <string name="release_date_mm_yy">Ngày hiệu lực</string>
    <string name="release_date_expired">Ngày hết hạn</string>
    <string name="release_issue_date">Ngày phát hành</string>
    <string name="cvv">Mã bảo mật</string>
    <string name="release_date_error">không đúng định dạng</string>
    <string name="number_card_error">Số thẻ không đúng định dạng</string>
    <string name="please_check_the_correct_name_printed_on_the_card">Vui lòng kiểm tra đúng tên in trên thẻ</string>
    <string name="enter_the_cardholder_full_name">Nhập họ tên chủ thẻ</string>
    <string name="the_cardholder_full_name">Tên chủ thẻ</string>
    <string name="done">Hoàn tất</string>
    <string name="resend_otp">Gửi lại OTP</string>
    <string name="allow">Cho phép</string>
    <string name="take_picture_again">Chụp lại</string>
    <string name="take_again">Làm lại</string>
    <string name="paper_photography">Chụp ảnh giấy tờ</string>
    <string name="take_face_photography">Chụp ảnh xác thực khuôn mặt</string>
    <string name="take_identify_photography">Chụp hình giấy tờ tuỳ thân</string>
    <string name="take_video_face_identify">Quay video xác thực khuôn mặt và giấy tờ tuỳ thân</string>
    <string name="time_video">1.  Video sẽ có độ dài 5 giây</string>
    <string name="please_keep_your_face_in_the_circle_frame">1.  Vui lòng giữ gương mặt ở trong khung</string>
    <string name="use_your_own_valid_id">1.  Sử dụng giấy tờ tuỳ thân hợp lệ của chính bạn</string>
    <string name="the_card_must_be_placed_inside_the_camera_frame">2.  Phải đặt thẻ bên trong khung camera</string>
    <string name="do_not_use_copies_of_identification_documents">3.  Không sử dụng bản sao giấy tờ tuỳ thân</string>
    <string name="keeps_photos_sharp_without_blurring">2.  Giữ cho ảnh sắc nét không bị nhoè</string>
    <string name="note_take_identify">Theo quy định của NHNN, tài khoản Ví điện tử phải được định danh trước khi sử dụng. Bạn vui lòng cung cấp thông tin giấy tờ tuỳ thân để hoàn tất việc kích hoạt ví.</string>
    <string name="keeps_face_identify">2.  Vui lòng giữ gương mặt và mặt trước giấy tờ tuỳ thân của bạn trước máy quay</string>
    <string name="please_take_avatar">Vui lòng giữ gương mặt trong khung hình</string>
    <string name="please_take_video">Giữ gương mặt và mặt trước giấy tờ tuỳ thân trước ống kính máy quay</string>
    <string name="confirm_take_photography">Xác nhận hình chụp</string>
    <string name="confirm_take_video">Xác nhận video</string>
    <string name="confirm_take_face">Xác nhận ảnh</string>
    <string name="select_identity">Chọn loại giấy tờ</string>
    <string name="take_face">Chụp hình xác thực khuôn mặt</string>
    <string name="take_video">Quay video xác thực</string>
    <string name="take_identify">Chụp hình giấy tờ tuỳ thân</string>
    <string name="take_note_identify">Theo quy định của NHNN, tài khoản Ví điện tử phải được định danh trước khi sử dụng. </string>
    <string name="forgot_password">Quên mật khẩu</string>
    <string name="identity_card">Chứng minh nhân dân</string>
    <string name="citizen_identity">Căn cước công dân</string>
    <string name="passport">Hộ chiếu</string>
    <string name="front">Mặt trước</string>
    <string name="backside">Mặt sau</string>
    <string name="understood">Đã hiểu</string>
    <string name="please_take_pictures_center">Vui lòng cân chỉnh giấy tờ tùy thân vào giữa khung</string>
    <string name="confirm_image_take_pictures_identify">Vui lòng xác nhận ảnh đã rõ nét, gương mặt của bạn đã có trong khung hình.</string>
    <string name="confirm_image_take_video_identify">Vui lòng xác nhận video đã rõ nét, gương mặt và giấy tờ tùy thân của bạn đã có trong khung hình.</string>
    <string name="confirm_payment">Thanh toán</string>
    <string name="payment">Thanh toán</string>
    <string name="confirm_otp">Xác thực OTP</string>
    <string name="confirm_pass">XÁC THỰC GIAO DỊCH</string>
    <string name="confirm_payment_2">Xác nhận thanh toán</string>
    <string name="content">Nội dung</string>
    <string name="file_browser">File Browser</string>
    <string name="cannot_open_file_chooser">Cannot Open File Chooser</string>
    <string name="payment_success">Thanh toán thành công</string>
    <string name="payment_fail">Thanh toán thất bại</string>
    <string name="payment_pending">Thanh toán đang chờ xử lý</string>
    <string name="payment_pending_description">Cần thời gian thêm để xử lý. Vui lòng không thực hiện lại tránh bị trùng. Liên hệ CSKH để hỗ trợ</string>
    <string name="payment_pending_hotline">1900 88 66 65</string>
    <string name="select_method_payment">Chọn nguồn thanh toán</string>
    <string name="please_enter_otp_from_phone_number">Vui lòng nhập mã OTP được gửi tới số điện thoại</string>
    <string name="please_enter_pass">Nhập mật khẩu ví PayME  để xác thực</string>
    <string name="active_now">Kích hoạt ngay</string>
    <string name="kyc_now">Định danh ngay</string>
    <string name="deposit_now">Nạp tiền</string>
    <string name="description_active_now">(*) Vui lòng kích hoạt tài khoản ví trước khi sử dụng</string>
    <string name="description_kyc_now">(*) Vui lòng định danh tài khoản ví trước khi sử dụng</string>
    <string name="description_deposit_now">(*) Chọn phương thức khác hoặc nạp thêm để thanh toán</string>
    <string name="amount_payment">Số tiền thanh toán</string>
    <string name="person_receiving">Người nhận</string>
    <string name="id_serice">Mã dịch vụ</string>
    <string name="close">Đóng</string>
    <string name="confirm_passport">Hộ chiếu chỉ dùng để cung cấp định danh cho người nước ngoài</string>
    <string name="ok">Đồng ý</string>
    <string name="change">Thay đổi</string>
    <string name="account_number">Số tài khoản</string>
    <string name="account_holder">Chủ tài khoản</string>
    <string name="select_bank">Chọn ngân hàng</string>
    <string name="search">Tìm kiếm</string>
    <string name="copied">Đã sao chép nội dung</string>
    <string name="confirm_transfer">Xác nhận đã chuyển</string>
    <string name="note_bank_transfer">(*) Giao dịch sẽ được thực hiện ngay sau khi xác nhận chuyển khoản </string>
    <string name="check_bank_transfer">Hệ thống đang kiểm tra trạng thái lệnh chuyển tiền của bạn. Vui lòng chờ trong giây lát...</string>
    <string name="result_bank_transfer">Hệ thống vẫn chưa ghi nhận lệnh chuyển tiền của bạn. Tài khoản của bạn sẽ được ghi có ngay khi hệ thống ghi nhận thành công.</string>
    <string name="free">Miễn phí</string>
    <string name="card_number">Số thẻ</string>
    <string name="receiver">Người nhận</string>
    <string name="service_code">Mã dịch vụ</string>
    <string name="method">Phương thức</string>
    <string name="affiliate_account">Nguồn tiền liên kết</string>
    <string name="fee">Phí</string>
    <string name="total_payment">Tổng thanh toán</string>
    <string name="transaction_code">Mã giao dịch</string>
    <string name="transaction_time">Thời gian giao dịch</string>
    <string name="transaction_fee">Phí giao dịch</string>
    <string name="please_transfer">Vui lòng chuyển tiền nhanh 24/7</string>
    <string name="amount">số tiền</string>
    <string name="go_to_the_account_information_below">tới</string>
    <string name="enter_the_OTP_code">Nhập mã OTP</string>
    <string name="that_was_sent_to_the_phone_number_that_registered_the_card">đã được gửi qua số điện thoại đăng ký thẻ</string>
    <string name="that_was_sent_to_the_phone_number_that_registered_PayME_WALLET">đã được gửi qua số điện thoại đăng ký Ví PayME</string>
    <string name="min_transaction_amount">Số tiền giao dịch tối thiểu</string>
    <string name="maximum_transaction_amount">Số tiền giao dịch tối đa</string>
    <string name="method_not_supported">Phương thức chưa được hỗ trợ</string>
    <string name="function_can_only_manipulate_production">Chức năng chỉ có thể thao tác môi trường production</string>
    <string name="balance_in_wallet_is_insufficient">Số dư trong ví không đủ</string>
    <string name="no_payment_method_found">Không tìm thấy phương thức thanh toán</string>
    <string name="account_not_logged_in">Tài khoản chưa đăng nhập</string>
    <string name="account_not_activated">Tài khoản chưa kích hoạt</string>
    <string name="account_unknown">Tài khoản chưa định danh</string>
    <string name="STK">Số tài khoản</string>
    <string name="C_TK">Tên tài khoản</string>
    <string name="viet_qr_note">Sử dụng ứng dụng ngân hàng có hỗ trợ quét VietQR để chuyển tiền.</string>
    <string name="list_bank_support_u"><u>Danh sách ngân hàng hỗ trợ </u></string>
    <string name="list_bank_support">Danh sách ngân hàng hỗ trợ</string>
    <string name="not_found_bank">Không tìm thấy ngân hàng nào</string>
    <string name="checking">Đang kiểm tra...</string>
    <string name="on_flash">Bật flash</string>
    <string name="off_flash">Tắt flash</string>
    <string name="scan_qr_code">Quét QR code</string>
    <string name="keep_the_QRCode_in_the_frame">Giữ mã QRCode trong khung</string>
    <string name="error_manual_bank">Không tìm thấy danh sách ngân hàng thụ hưởng</string>
    <string name="other">Hoặc</string>
    <string name="please_enter_the_phone_number">Vui lòng nhập số điện thoại</string>
    <string name="please_check_transaction">Giao dịch đang được xử lý</string>
    <string name="cancel_the_transaction">Huỷ giao dịch</string>
    <string name="credit_wallet">Ví tín dụng</string>
    <string name="please_grant_permission">Vui lòng cấp quyền</string>
    <string name="card_scanner_hint">Đặt số thẻ vừa khớp vào khung để bắt đầu quét!</string>
    <string name="card_scanner_hint2">Vui lòng điều chỉnh vị trí thẻ, đảm bảo nhìn rõ số thẻ, không bị chói, mờ!</string>
    <string name="card_scanning">Đang nhận diện...</string>
    <string name="scan_viet_qr">Sử dụng ứng dụng ngân hàng hoặc ví điện tử có hỗ trợ quét mã QR để thanh toán</string>
    <string name="viet_qr_hint">Hoặc chuyển khoản đến</string>
    <string name="download_viet_qr">Tải mã thanh toán</string>
    <string name="download_succeeded_viet_qr">Đã tải mã QR thành công</string>
    <string name="download_failed_viet_qr">Tải mã QR thất bại</string>
    <string name="grant_permission_access_camera">Cho phép truy cập máy ảnh của bạn</string>
    <string name="grant_permission_access_camera_desc">Bạn hãy cho phép truy cập máy ảnh trong phần Cài Đặt của hệ thống để tiếp tục</string>
    <string name="grant_permission_access_storage">Cho phép truy cập bộ nhớ của bạn</string>
    <string name="grant_permission_access_storage_desc">Bạn hãy cho phép truy cập bộ nhớ trong phần Cài Đặt của hệ thống để tiếp tục</string>
    <string name="copied_to_clipboard">Đã sao chép vào bộ nhớ tạm</string>
</resources>