<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:clickable="true"
    android:paddingHorizontal="16dp"
    android:paddingTop="8dp">
    <!--        ButtonChange-->





    <vn.payme.sdk.component.InputInfo
        android:id="@+id/inputCardNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:pbInputType="number"
        app:pbMaxlength="21"
        app:pbTitle="@string/enter_number_card" />

    <vn.payme.sdk.component.InputInfo
        android:id="@+id/inputCardHolder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/inputCardNumber"
        app:pbDigits="ABCDEFGHIJKLMNOPQRSTUVWXYZ "
        app:pbInputType="textFilter"
        app:pbMaxlength="50"
        app:pbTitle="@string/enter_the_cardholder_full_name" />

    <vn.payme.sdk.component.InputInfo
        android:id="@+id/inputCardDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/inputCardHolder"
        app:pbHint="MM / YY"
        app:pbInputType="number"
        app:pbMaxlength="5"
        app:pbTitle="@string/release_date_mm_yy" />




</androidx.constraintlayout.widget.ConstraintLayout>

