<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:clickable="true"
    android:paddingHorizontal="16dp"
    android:paddingTop="8dp">
    <!--        ButtonChange-->






    <vn.payme.sdk.component.InputInfo
        android:id="@+id/inputCardNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:pbInputType="number"
        app:pbMaxlength="22"
        app:pbTitle="@string/enter_number_card" />


    <LinearLayout
        app:layout_constraintTop_toBottomOf="@id/inputCardNumber"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <vn.payme.sdk.component.InputInfo
            android:id="@+id/inputCardDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:pbHint="MM / YY"
            app:pbInputType="number"
            android:layout_marginRight="16dp"
            android:layout_weight="1"
            app:pbMaxlength="5"
            app:pbTitle="@string/release_date_expired" />
        <vn.payme.sdk.component.InputInfo
            android:id="@+id/inputCvv"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/inputCardHolder"
            app:pbHint="CVV"
            app:pbInputType="textPassword|number"
            app:pbMaxlength="3"
            app:pbTitle="@string/cvv" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>

