<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:clickable="true"
    >
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:background="@drawable/background_radius_confirm_payment"
        android:layout_height="match_parent"
        android:paddingBottom="16dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:text="@string/take_identify"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:textColor="@color/blackSeven"
            android:fontFamily="@font/main_bold"
            android:id="@+id/titlePopup"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toTopOf="parent"
            android:textSize="17dp"
            android:layout_height="wrap_content"/>
        <ImageView
            android:src="@drawable/close"
            app:layout_constraintTop_toTopOf="@id/titlePopup"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_width="wrap_content"
            android:id="@+id/buttonClose"
            android:padding="16dp"
            app:layout_constraintBottom_toBottomOf="@id/titlePopup"
            android:layout_height="wrap_content"/>
        <TextView
            app:layout_constraintTop_toBottomOf="@id/titlePopup"
            android:layout_width="match_parent"
            android:textAlignment="center"
            android:id="@+id/txtNote"
            android:layout_marginHorizontal="16dp"
            android:paddingHorizontal="16dp"
            android:paddingVertical="10dp"
            android:fontFamily="@font/main_regular"
            android:textSize="14dp"
            android:layout_marginTop="16dp"
            android:text="@string/take_note_identify"
            android:layout_height="wrap_content"/>

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/animation_view"
            android:layout_width="150dp"
            android:layout_marginTop="16dp"
            android:layout_height="150dp"
            android:scaleType="centerCrop"
            app:lottie_rawRes="@raw/chupgttt"
            app:lottie_loop="true"
            app:lottie_autoPlay="false"
            app:layout_constraintTop_toBottomOf="@id/txtNote"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            />




            <TextView
                android:layout_weight="1"
                android:fontFamily="@font/main_semibold"
                android:textSize="14dp"
                android:id="@+id/note1"
                android:textColor="@color/dark"
                android:layout_marginLeft="16dp"
                app:layout_constraintTop_toBottomOf="@id/animation_view"
                android:layout_width="match_parent"
                android:layout_marginHorizontal="32dp"
                android:text="@string/use_your_own_valid_id"
                android:layout_height="wrap_content">
            </TextView>


            <TextView
                android:layout_weight="1"
                android:layout_marginTop="6dp"
                android:id="@+id/note2"
                app:layout_constraintLeft_toLeftOf="@id/note1"
                app:layout_constraintTop_toBottomOf="@id/note1"
                android:fontFamily="@font/main_semibold"
                android:textSize="14dp"
                android:textColor="@color/dark"
                android:layout_width="wrap_content"
                android:text="@string/the_card_must_be_placed_inside_the_camera_frame"
                android:layout_height="wrap_content">
            </TextView>


            <TextView
                app:layout_constraintTop_toBottomOf="@id/note2"
                android:layout_marginTop="6dp"
                android:id="@+id/note3"
                app:layout_constraintLeft_toLeftOf="@id/note2"
                android:layout_weight="1"
                android:fontFamily="@font/main_semibold"
                android:textSize="14dp"
                android:textColor="@color/dark"
                android:layout_width="wrap_content"
                android:text="@string/do_not_use_copies_of_identification_documents"
                android:layout_height="wrap_content">
            </TextView>



        <vn.payme.sdk.component.Button
            android:id="@+id/buttonNext"
            android:layout_marginHorizontal="16dp"
            android:layout_width="match_parent"
            app:layout_constraintTop_toBottomOf="@id/note3"
            android:layout_height="wrap_content"
            app:pbText="@string/next"
            android:layout_marginTop="16dp"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>