<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:paddingHorizontal="16dp"
    android:paddingBottom="16dp"
    >
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:background="@drawable/background_radius"
        android:padding="16dp"
        android:layout_height="match_parent"
        >
        <ImageView
            android:id="@+id/animation_view"
            android:layout_width="150dp"
            android:src="@drawable/scancmnd"
            android:layout_height="150dp"
            android:scaleType="centerCrop"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            />
        <TextView
            android:layout_width="wrap_content"
            android:id="@+id/title"
            android:text="@string/take_identify_photography"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/animation_view"
            android:layout_marginTop="16dp"
            android:textColor="@color/darkBlueGrey"
            android:fontFamily="@font/semi_bold"
            android:textSize="18dp"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/textNote"
            android:layout_width="match_parent"
            android:textAlignment="center"
            android:layout_marginTop="16dp"
            android:textSize="13dp"
            android:textColor="@color/brownGreyTwo"
            android:fontFamily="@font/barlow_regular"
            android:text="@string/note_take_identify"
            app:layout_constraintTop_toBottomOf="@id/title"
            android:layout_height="wrap_content">

        </TextView>
        <LinearLayout
            android:layout_marginTop="16dp"
            android:id="@+id/note1"
            app:layout_constraintTop_toBottomOf="@id/textNote"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:src="@drawable/fillcopy"
                android:layout_width="15dp"
                android:layout_height="12dp"
                />
            <TextView
                android:layout_weight="1"
                android:fontFamily="@font/barlow_medium"
                android:textSize="14dp"
                android:textColor="@color/dark"
                android:layout_marginLeft="16dp"
                android:layout_width="wrap_content"
                android:text="@string/use_your_own_valid_id"
                android:layout_height="wrap_content">
            </TextView>

        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="16dp"
            android:id="@+id/note2"
            app:layout_constraintTop_toBottomOf="@id/note1"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginBottom="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:src="@drawable/fillcopy"
                android:layout_width="15dp"
                android:layout_height="12dp"
                />
            <TextView
                android:layout_weight="1"
                android:fontFamily="@font/barlow_medium"
                android:textSize="14dp"
                android:textColor="@color/dark"
                android:layout_marginLeft="16dp"
                android:layout_width="wrap_content"
                android:text="@string/the_card_must_be_placed_inside_the_camera_frame"
                android:layout_height="wrap_content">
            </TextView>

        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="16dp"
            android:id="@+id/note3"
            app:layout_constraintTop_toBottomOf="@id/note2"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginBottom="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:src="@drawable/fillcopy"
                android:layout_width="15dp"
                android:layout_height="12dp"
                />
            <TextView
                android:layout_weight="1"
                android:fontFamily="@font/barlow_medium"
                android:textSize="14dp"
                android:textColor="@color/dark"
                android:layout_marginLeft="16dp"
                android:layout_width="wrap_content"
                android:text="@string/do_not_use_copies_of_identification_documents"
                android:layout_height="wrap_content">
            </TextView>

        </LinearLayout>


        <vn.payme.sdk.component.Button
            android:id="@+id/buttonNext"
            android:layout_width="match_parent"
            app:layout_constraintTop_toBottomOf="@id/note3"
            android:layout_height="wrap_content"
            app:pbText="@string/next"
            android:layout_marginTop="16dp"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>